<package>
	<name>freenect2_camera</name>
	<version>0.0.0</version>
	<description>Experimental driver for Kinect v2</description>

	<maintainer email="max.schwarz@online.de">Max Schwarz</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>nodelet</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<run_depend>nodelet</run_depend>

	<export>
		<nodelet plugin="${prefix}/nodelets.xml" />
	</export>
</package>
